fixed fullscreen problem on gallery component and gallery page, tertiary color to white, play and pause button on smaller screen is now moving up next to hamburger menu

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,7 +1,7 @@
 :root {
     --primary: rgb(196, 235, 22);
     --secondary: black;
-    --tertiary:rgb(227, 224, 224);
+    --tertiary:white;
 }
 
 .footer {
@@ -16,6 +16,11 @@ footer p {
     color: var(--tertiary);
     font-size: .6rem;
     margin-left: 2rem;
+}
+
+.linkToSilvia {
+    text-decoration: none;
+    color: var(--tertiary);
 }
 
 @media(max-width: 960px) {
