--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -101,7 +101,6 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 40vh;
         position: absolute;
         top: -1.5rem;
         left:-110%;
